[package]
name = "Reefback"
version = "0.1.0"
edition = "2024"

[dependencies]
glium = { version = "0.35.0", default-features = true }
imgui-glium-renderer = { version = "0.13.0", git = "https://github.com/imgui-rs/imgui-glium-renderer" }
imgui = { git = "https://github.com/imgui-rs/imgui-rs", version = "0.12", features = [] }
imgui-winit-support = { version = "0.13", git = "https://github.com/imgui-rs/imgui-winit-support" }

[features]
udp-networking = []
sim-networking = []
host = []
default = ["sim-networking", "udp-networking"]
