[package]
name = "Reefback"
version = "0.1.0"
edition = "2024"

[dependencies]
glow = "0.14.2"
glutin = "0.32.3"
glutin-winit = "0.5.0"
imgui = { version = "0.12", features = ["docking"] }
imgui-glow-renderer = "0.13.0"
imgui-winit-support = "0.13.0"
rand = "0.9.2"
raw-window-handle = "0.6.2"
winit = "0.30.12"


[features]
udp-networking = []
sim-networking = []
host = []
default = ["sim-networking", "udp-networking"]
